further refined residual analysis

--- a/Initial_Frequentist_Analysis.ipynb
+++ b/Initial_Frequentist_Analysis.ipynb
@@ -379,25 +379,35 @@
       "source": [
         "## **Initial model OLS interpretations:**\n",
         "\n",
-        "**R-squared: 0.582**:\n",
+        "### **Overall Model**\n",
+        "**R-squared: 0.582:**\n",
         "*   The R-squared value indicates that 58.2% of the variation in Dollars Spent 2022 can be explained by the model, which includes the constant and treatment as predictors.\n",
         "*   While 0.582 indicates a moderate to good fit, it also means that 41.8% of the variation remains unexplained.\n",
         "\n",
-        "**Constant (Intercept) Coefficient:  54.5704**\n",
+        "### **Coefficients**\n",
+        "**Constant (Intercept) Coefficient:  54.5704:**\n",
         "*   The coefficient value of the constant represents the predicted average 2022 dollar spending for customers who did not receive the treatment.\n",
         "\n",
-        "**Treatment Coefficient:  75.9865**\n",
+        "**Treatment Coefficient: 75.9865:**\n",
         "*   The coefficient value represents the predicted average additional 2022 dollar spending for customers who did receive the treatment, compared to customers who did not receive the gift.\n",
         "*   The model suggests that customers who received the surprise gift spent nearly $76 more on average than those who did not.\n",
         "\n",
         "\n",
-        "**const and Treatment P>|t|: 0.000**:\n",
+        "**const and Treatment P>|t|: 0.000:**\n",
         "*  A P-value of 0.000 means the constant and treatment effects are statistically significant and have a meaningful impact on 2022 customer spending.\n",
         "\n",
+        "### **Residual Analysis**\n",
+        "\n",
+        "**Omnibus: 4891.230:**\n",
+        "*  The Omnibus value gives insight based on skewness and kurtoisis(tailedness). The given large value paired with a small Prob(Omnibus) value of 0.000 indicates that the residuals significantly deviates from a normal distribution.\n",
+        "\n",
+        "**Skew: 1.140:**\n",
+        "*  Measuring the asymmetry of the residuals, a skew value of 1.140 indicates that the residuals are positively skewed.\n",
         "\n",
         "## **OLS Takeaways:**\n",
         "\n",
-        "*   The R-squared of 0.582 indicates that the model explains about 58.2% of the variance in spending, meaning that while the model is decent, there may be other variables that could further improve it."
+        "*   The R-squared of 0.582 indicates that the model explains about 58.2% of the variance in spending, meaning that while the model is decent, there may be other variables that could further improve it.\n",
+        "*  The results of the residual analysis values suggest that the model's residuals are not normally distribuetd and that the model tends to under-predict high values of the dependant variable."
       ],
       "metadata": {
         "id": "Jg0NrAlZXdqV"
@@ -487,7 +497,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Initial model Residual Graph interpretations:**\n",
+        "## **Initial Model Residual Graph Interpretations:**\n",
         "\n",
         "**Distribution of Residuals Histogram**:\n",
         "*   Slight visually apparent right skew, indicating that the model errors are not normally distributed over all predictions.\n",
@@ -577,10 +587,12 @@
       "source": [
         "## **Interaction model OLS interpretations:**\n",
         "\n",
+        "### **Overall Model**\n",
         "**R-squared: 0.914**:\n",
         "*   The R-squared value indicates that 91.4% of the variation in Dollars Spent 2022 can be explained by the model, which includes the constant, 2021 spending, and treatment as predictors.\n",
         "*   0.914 indicates a good fit, meaning that only 8.6% of the variation remains unexplained and that the model fits the data well.\n",
         "\n",
+        "### **Coefficients**\n",
         "**Constant (Intercept) Coefficient:  9.8443**\n",
         "*   The coefficient value of the constant represents the predicted average 2022 dollar spending for customers who's 2021 spending is $0 and did not receive the treatment.\n",
         "\n",
@@ -599,11 +611,18 @@
         "**P>|t|: 0.000**:\n",
         "*  A P-value of 0.000 for all effects means that they are statistically significant and have a meaningful effect on 2022 customer spending.\n",
         "\n",
+        "### **Residual Analysis**\n",
+        "**Omnibus: 2.531:**\n",
+        "*  The smaller Omnibus value, combined with the Prob(Omnibus) value of 0.282, indicates that the residuals are not significantly different from a normal distribution. This suggests that the model meets the assumption of normality.\n",
+        "\n",
+        "**Skew: 0.013:**\n",
+        "*  The skew value is very close to zero, indicating that the residuals are symmetrically distributed around zero.\n",
         "\n",
         "## **OLS Takeaways:**\n",
         "\n",
         "*   The R-squared of 0.914 is a significant improvement over the initial model's R-squared of 0.582.\n",
-        "*   The R-squared value indicates that including the interaction effects greatly enhances the model's explanatory power."
+        "*   The R-squared value indicates that including the interaction effects greatly enhances the model's explanatory power.\n",
+        "*   The Omnibus and Skew values show significant improvements, confirming that the residuals are normally distributed and symmetrically centered around zero."
       ],
       "metadata": {
         "id": "XRG200v_OjEF"
@@ -680,7 +699,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Interaction model Residual Graph interpretations:**\n",
+        "## **Interaction Model Residual Graph Interpretations:**\n",
         "\n",
         "**Distribution of Residuals Histogram**:\n",
         "*   Matches the ideal case:\n",
